--- a/index.html
+++ b/index.html
@@ -1,36 +1,37 @@
-<!doctype html>
-<!--
-Copyright 2018 The Go Authors. All rights reserved.
-Use of this source code is governed by a BSD-style
-license that can be found in the LICENSE file.
--->
 <html>
-
 <head>
-	<meta charset="utf-8">
-	<title>Go wasm</title>
+    <title>WebGL test 1</title>
+    <script src="wasm_exec.js"></script>
+    <script>
+        const go = new Go();
+        WebAssembly.instantiateStreaming(fetch('main.wasm'),go.importObject).then( res=> {
+            go.run(res.instance)
+        })
+    </script>
+    <style>
+        body,pre { margin:0;padding:0; }
+        #mycanvas {
+            position:fixed;
+            opacity:0.9;
+            width: 100%;
+            height:100%;
+            top:0;right:0;bottom:0;left:0;
+        }
+    </style>
 </head>
-
 <body>
-	<script src="wasm_exec.js"></script>
-	<script>
-		if (!WebAssembly.instantiateStreaming) { // polyfill
-			WebAssembly.instantiateStreaming = async (resp, importObject) => {
-				const source = await (await resp).arrayBuffer();
-				return await WebAssembly.instantiate(source, importObject);
-			};
-		}
-
-		const go = new Go();
-		let mod, inst;
-		WebAssembly.instantiateStreaming(fetch("main.wasm"), go.importObject).then((result) => {
-			mod = result.module;
-			inst = result.instance;
-			// document.getElementById("runButton").disabled = false;
-            go.run(inst);
-		});
-	</script>
-    <canvas id="mycanvas"></canvas>
+<div class="code">
+    <pre><code id="code"></code></pre>
+</div>
+<canvas id="mycanvas"></canvas>
+<div class="control">
+    <div id="fps">0</div>
+    <div class="control-group">
+        <input id="speed" type="range" min="10" max="1000" value="160">
+    </div>
+    <div class="control-group">
+        <input id="count" type="range" min="10" max="1000" value="100">
+    </div>
+</div>
 </body>
-
 </html>
