--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             width: 100%;
             height:100%;
             top:0;right:0;bottom:0;left:0;
+            border: 1px solid black;
         }
     </style>
 </head>
