Added text to the canvas, telling the user to try the keyboard keys

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>WebGL test 1</title>
+    <title>Wasm Keyboard Input</title>
     <script src="wasm_exec.js"></script>
     <script>
         const go = new Go();
