Initial working code to display points, and lines drawn between them

--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
     </style>
 </head>
 <body>
-<canvas id="mycanvas"></canvas>
+<canvas id="mycanvas">Your browser doesn't appear to support the canvas tag.</canvas>
 </body>
 </html>
