Updated title in the html, turned off debugging output to the console

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Wasm Graph 1</title>
+    <title>Go Wasm 2D Canvas Example - Use keypad keys to control rotation</title>
     <script src="wasm_exec.js"></script>
     <script>
         const go = new Go();
